# budgeteer

./: .dockerignore  .editorconfig  .eslintrc  .eslintrc.json  .foreverignore  .gitignore  .graphqlconfig.yml  .jshintrc  .prettierignore  .prettierrc.js  .snyk  Dockerfile  README.md  Vagrantfile  app-require.js  backpack.paw  bower.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.json5  gulpfile.js  index.js  jest.config.js  karma.conf.js  machine-setup.sh  nodemon.json  now.json  package-lock.json  package.json  tsconfig.json  webpack-development.config.js  webpack-production.config.js  webpack.build.js  webpack.config.js  webpack.dev.js  webpack.make.js  webpack.test.js
client/: docker-compose.yml  index.html  login.html  main.jsx  modal.jsx  nav.js  nginx.conf  router.jsx
config/: index.js
database/: dev.sh
gulp/: browserify.js  config.js
lib/: timer.ts
logs/: undefined
prisma/: datamodel.graphql  prisma.yml
schemas/: Entertainment.graphql  Finance.graphql  GoodOrService.graphql  schema.graphql
scss/: main.scss
server/: db.js  index.js  logger.js  (+8 more)
services/api/: Dockerfile  Dockerfile.prod  backpack.paw  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
services/api/docs/: activity.md
services/api/project/: __init__.py  config.py  routes.py
services/api/project/models/: __init__.py  activity.py  match.py  user.py
services/api/project/schemas/: __init__.py  activity.py
services/api/tests/: test_app.py  test_user.py
services/api/tests/models/: test_activity.py  test_match.py  test_user.py
(+522 files in other folders)
