[tool.poetry]
name = "backpack-api"
version = "0.1.0"
description = ""
authors = ["Chase <chase@theponti.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-sqlalchemy = "^2.4.1"
psycopg2-binary = "^2.8.4"
gunicorn = "^20.0.4"
coverage = "^5.0.3"
pytest = "^5.3.5"
flask-migrate = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
